# gpux

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DOCUMENTATION_PLAN.md  Dockerfile  Makefile  QUICK_START.md  README.md  REBUILD_SUMMARY.md  coverage.json  docker-compose.yml  gpux.yml  mkdocs.yml  pyproject.toml  validation_results.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml
brainstorming/: DEVELOPMENT_PATH.md  RECOMMENDATION_STRATEGY.md  RECOMMENDED_APPROACH.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  idea.md
development/: .gitignore  README.md
development/decisions/: README.md  TEMPLATE_DECISION.md
development/ideas/: README.md  TEMPLATE_IDEA.md
development/ideas/feature-requests/: huggingface-integration.md  modern-coreml-configuration.md
development/ideas/technical-ideas/: automatic-text-preprocessing.md  dynamic-onnx-opset-selection.md  enhanced-conversion-warning-suppression.md  modern-coreml-execution-provider-configuration.md  onnx-runtime-metadata-extraction-robustness.md
development/implementation/: README.md  TEMPLATE_TASK.md
development/implementation/milestones/: multi-registry-integration.md
development/implementation/progress/: phase1-completion-report.md
development/implementation/tasks/: documentation-and-examples.md  gpux-pull-command.md  huggingface-manager.md  model-manager-interface.md  onnx-conversion-pipeline.md  performance-benchmarks.md  unified-model-discovery.md
development/phases/: README.md  TEMPLATE_PHASE.md
development/phases/completed/: multi-registry-phase-1.md
development/phases/current/: multi-registry-phase-1.md
development/phases/planned/: multi-registry-phase-2.md  multi-registry-phase-3.md  multi-registry-phase-4.md
development/research/: README.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  faq.md  glossary.md  help.md  index.md
docs/about/: alternatives.md  architecture.md  benchmarks.md  changelog.md  contributing.md  index.md  license.md  roadmap.md
docs/advanced/: custom-providers.md  index.md  memory-management.md  monitoring.md  optimization.md  production.md  profiling.md  security.md  troubleshooting.md
docs/deployment/: aws.md  azure.md  docker.md  edge.md  gcp.md  index.md  kubernetes.md  serverless.md
docs/examples/: embedding-generation.md  huggingface-models.md  image-classification.md  index.md  llm-inference.md  multi-modal.md  object-detection.md  sentiment-analysis.md  speech-recognition.md
docs/guide/: batch-inference.md  error-handling.md  index.md  inputs-outputs.md  models.md  preprocessing.md  providers.md  python-api.md  registries.md
docs/javascripts/: extra.js
docs/reference/: index.md
docs/reference/cli/: build.md  inspect.md  pull.md  run.md  serve.md
docs/reference/configuration/: inputs.md  model.md  outputs.md  preprocessing.md  runtime.md  schema.md  serving.md
docs/reference/http-api/: endpoints.md  health.md  info.md  predict.md
docs/reference/python-api/: config.md  models.md  providers.md  runtime.md
docs/stylesheets/: extra.css
docs/tutorial/: benchmarking.md  configuration.md  first-steps.md  index.md  installation.md  pulling-models.md  running-inference.md  serving.md
examples/: README.md
examples/image-classification/: gpux.yml
examples/llm-chat/: gpux.yml
examples/object-detection/: gpux.yml
examples/sentiment-analysis/: gpux.yml
examples/speech-recognition/: gpux.yml
scripts/: quick_validate.py  realistic_validate.py  setup-dev.sh  simple_validate.py  validate.py  validate_phase1.py
src/gpux/: __init__.py
src/gpux/cli/: __init__.py  build.py  inspect.py  main.py  pull.py  run.py  serve.py
src/gpux/config/: __init__.py  parser.py
src/gpux/core/: __init__.py  discovery.py  models.py  providers.py  runtime.py
src/gpux/core/conversion/: __init__.py  base.py  config_generator.py  optimizer.py  pytorch.py  tensorflow.py
src/gpux/core/managers/: __init__.py  base.py  exceptions.py  huggingface.py
src/gpux/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_cli_build.py  test_cli_inspect.py  test_cli_integration.py  test_cli_main.py  test_cli_pull.py  test_cli_run.py  test_cli_serve.py  test_config.py  test_conversion.py  test_huggingface_manager.py  test_integration.py  test_model_discovery.py  test_model_manager.py  test_providers.py  test_runtime.py  test_tensorflow_converter.py  test_utils_helpers.py
